--- a/packages/typescript/tsconfig.node.json
+++ b/packages/typescript/tsconfig.node.json
@@ -1,14 +1,9 @@
 {
-	"extends": "./tsconfig.json",
-	"compilerOptions": {
-		"composite": true,
-		"types": ["node", "vitest/globals"],
-	},
-	"include": [
-		"./src"
-	],
-	"exclude": [
-		"./node_modules",
-		"./src/browser"
-	]
+    "extends": "./tsconfig.json",
+    "compilerOptions": {
+        "composite": true,
+        "types": ["node", "vitest/globals"]
+    },
+    "include": ["./src"],
+    "exclude": ["./node_modules", "./src/browser"]
 }
