--- a/packages/typescript/tsconfig.browser.json
+++ b/packages/typescript/tsconfig.browser.json
@@ -1,18 +1,10 @@
 {
-	"extends": "./tsconfig.json",
-	"compilerOptions": {
-		"composite": true,
-		"lib": [
-			"DOM",
-			"ESNext"
-		],
-		"types": ["vitest/globals"]
-	},
-	"include": [
-		"./src"
-	],
-	"exclude": [
-		"./node_modules",
-		"./src/node"
-	]
+    "extends": "./tsconfig.json",
+    "compilerOptions": {
+        "composite": true,
+        "lib": ["DOM", "ESNext"],
+        "types": ["vitest/globals"]
+    },
+    "include": ["./src"],
+    "exclude": ["./node_modules", "./src/node"]
 }
